# llm-ant-farm

./: README.md  main.py  pyproject.toml  redis-notes.md
agent/: agent.py  generative_agent.py
agent/memories/: john.txt
agent/memory/: memory.py  memory_stream.py  redis_setup.py
