[tool.poetry]
name = "ant-farm"
version = "0.1.0"
description = "My implementation of the Stanford experiment \"Generative Agents: Interactive Simulacra of Human Behavior\""
authors = ["Graham Home <grahamhome333@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
