[tool.poetry]
name = "ant-farm"
version = "0.1.0"
description = "My implementation of the Stanford experiment \"Generative Agents: Interactive Simulacra of Human Behavior\""
authors = ["Graham Home <grahamhome333@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.5.4"
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
