[tool.poetry]
name = "ant-farm"
version = "0.1.0"
description = "My implementation of the Stanford experiment \"Generative Agents: Interactive Simulacra of Human Behavior\""
authors = ["Graham Home <grahamhome333@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.166"
openai = "^0.27.6"
python-dotenv = "^1.0.0"
faiss-cpu = "^1.7.4"
black = "^23.3.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
